# zero2prod

./: .gitignore  Cargo.toml  README.md  configuration.yaml
.github/workflows/: general.yaml
migrations/: 20240413215306_create_subscriptions_table.sql
scripts/: init_db.sh
src/: configuration.rs  lib.rs  main.rs  startup.rs  telemetry.rs
src/routes/: subscriptions.rs
tests/: health_check.rs
